--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,9 +1,6 @@
 <resources>
     <!--Universal-->
 
-    <string name="app_name" translatable="false">Magisk Manager</string>
-    <string name="magisk" translatable="false">Magisk</string>
-
     <!--Welcome Activity-->
     <string name="navigation_drawer_open">Apri drawer navigazione</string>
     <string name="navigation_drawer_close">Chiudi drawer navigazione</string>
@@ -16,12 +13,12 @@
     <string name="install">Installa</string>
 
      <!--Status Fragment-->
-    <string name="magisk_version">Versione Magisk: v. %1$s</string>
-    <string name="magisk_version_core_only">Versione Magisk v. %1$s (modo core)</string>
+    <string name="magisk_version">Versione Magisk: v%1$s</string>
+    <string name="magisk_version_core_only">Versione Magisk v%1$s (modo core)</string>
     <string name="magisk_version_error">Magisk non installato</string>
 
     <string name="checking_for_updates">Controllo aggiornamenti…</string>
-    <string name="magisk_update_available">È disponibile Magisk v. %1$s!</string>
+    <string name="magisk_update_available">È disponibile Magisk v%1$s!</string>
     <string name="cannot_check_updates">Impossibile controllare aggiornamenti</string>
     <string name="up_to_date">La versione di %1$s è aggiornata</string>
     <string name="root_error">Rootato ma senza permessi. Non sei autorizzato?</string>
