--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,8 @@
     <string name="settings_dark_theme_summary">Enable dark theme</string>
     <string name="settings_notification_title">Update Notification</string>
     <string name="settings_notification_summary">Show update notifications when new version is available</string>
+    <string name="icon_launcher">Show app icon in the launcher</string>
+    <string name="icon_launcher_summary">It may require a launcher reboot</string>
     <string name="settings_clear_cache_title">Clear Repo Cache</string>
     <string name="settings_clear_cache_summary">Clear the cached information for online repos, forces the app to refresh online</string>
 
