--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,7 +4,6 @@
     <!--Welcome Activity-->
     <string name="navigation_drawer_open">فتح درج التنقل</string>
     <string name="navigation_drawer_close">إغلاق درج التنقل</string>
-    <string name="magiskhide" translatable="false">Magisk إخفاء</string>
     <string name="modules">الإضافات</string>
     <string name="downloads">التنزيلات</string>
     <string name="superuser">Superuser</string>
@@ -200,12 +199,12 @@
     <string name="su_snack_revoke">%1$s الصلاحيات سحبت</string>
     <string name="su_revoke_title">سحب؟</string>
     <string name="su_revoke_msg">تأكيد لسحب صلاحيات %1$s ?</string>
-    <string name="toast">Toast</string>
+    <string name="toast">نخب</string>
     <string name="none">بدون</string>
 
     <!--Superuser logs-->
     <string name="pid">PID:\u0020</string>
-    <string name="target_uid">Target UID:\u0020</string>
-    <string name="command">Command:\u0020</string>
+    <string name="target_uid">الهدف UID:\u0020</string>
+    <string name="command">الأمر:\u0020</string>
 
 </resources>
