--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -152,7 +152,9 @@
     <string name="request_timeout">Expirare</string>
     <string name="superuser_notification">Notificare Superuser</string>
     <string name="request_timeout_summary">%1$s secunde</string>
-    
+    <string name="settings_su_reauth_title">Reautentificare după actualizare</string>
+    <string name="settings_su_reauth_summary">Reautentificare permisiuni pentru superuser după o actualizare a aplicației</string>
+ 
     <string name="multiuser_mode">Mod Multiutilizator</string>
     <string name="settings_owner_only">Numai proprietarul dispozitivului</string>
     <string name="settings_owner_manage">Gestionat de proprietarul dispozitivului</string>
